Separated the ability to reset the users password from the requirement for users to self confirm.  Now, users can have the ability to reset their passwords when the admin confirms them.

--- a/db/SystemSettings.yml
+++ b/db/SystemSettings.yml
@@ -19,3 +19,4 @@
     site_name: Goldberg
     self_reg_confirmation_error_page_id: "11"
     site_subtitle: A website development tool for Ruby on Rails
+    allow_password_retrieval: "1"
